feat(rendering): move shader and clean unused code